kubernetes/applications/apps/filebrowser/cloudflare-tunnel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-cloudflare
  namespace: apps
  labels:
    app: filebrowser
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: files.kernow.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
